syntax = "proto3";

package io.harness.pms.data;

option java_multiple_files = true;

message StepOutcomeRef {
  string name = 1;
  string instanceId = 2;
}