// Copyright 2020 Harness Inc. All rights reserved.
// Use of this source code is governed by the PolyForm Shield 1.0.0 license
// that can be found in the licenses directory at the root of this repository, also available at
// https://polyformproject.org/wp-content/uploads/2020/06/PolyForm-Shield-1.0.0.txt.

syntax = "proto3";

package io.harness.perpetualtask.instancesync;

option java_multiple_files = true;

message SpotinstAmiInstanceSyncPerpetualTaskParamsNg {
  string account_id = 1;
  string infrastructure_key = 2;
  bytes spotinst_config = 3;
  bytes spotinst_encrypted_data = 4;
  repeated string elastigroup_ids = 5;
}
